Mon Apr  8 19:57:40 CEST 2002  Johnny Mnemonic <johnny@themnemonic.org>

	* Added config parse status SILC_CONFIG_EPRINTLINE, this status
	  must be handled by the application and should tell the application
	  that an error message was already printed, and it should print the
	  config coords (line, filename, ...).  Affected files are
	  silcd/serverconfig.c, lib/silcutil/silcconfig.[ch].

	* Added local macro SILC_SERVER_CONFIG_ALLOCTMP to make the
	  server config parsing code more readable.

	  Fixed a bug in the fetch_logging() config callback.

	  Affected files is silcd/serverconfig.c.

	* Drop root privileges when started in foreground.  Don't drop them
	  if debugging also.  Affected file is silcd/silcd.c.

Wed Apr  3 12:36:05 CEST 2002  Pekka Riikonen <priikone@silcnet.org>

        * Added better error logging in rekey protocol.  Affected file
          silcd/protocol.c.

        * Do not check public key types in SKE during rekey.  Affected
          file lib/silcske/payload.c.

        * Fixed the rekey protocol with PFS, which was totally broken.
          Affected file silcd/protocol.c.

Tue Apr  2 13:39:04 CEST 2002  Johnny Mnemonic <johnny@themnemonic.org>

	* Merged version 1.1.4 of zlib. Even if it not currently in use,
	  it's good not to have security holes here.

	* Fixed a negative refcount situtuation for the config context.
	  Affected file is silcd/serverconfig.c.

Mon Apr  1 20:15:10 CEST 2002  Johnny Mnemonic <johnny@themnemonic.org>

	* ROBOdoc documented lib/silcutil/silcutil.h.

Sat Mar 30 18:15:55 EET 2002  Pekka Riikonen <priikone@silcnet.org>

	* Changed the silc_get_username and silc_get_real_name to
	  never fail.  Affected file lib/silcutil/unix/silcunixutil.c.

	* Fixed the Irssi SILC Client to use the silc_get_username and
	  silc_get_real_name insted of glib routines since the glib
	  routines only corrupt stack.  Fixes the Irssi SILC to work in
	  Cygwin.  Affected file irssi/src/silc/core/silc-core.c.
